testdata/operators/pass/operator_overloading1.dws
// Ported from: reference/dwscript-original/Test/OperatorOverloadPass/operator_overloading1.pas
// Purpose: Test String + Integer operator overload
// Expected: String concatenation with Integer values formatted in brackets

function StrPlusInt(s : String; i : Integer) : String;
begin
   Result:=s+'['+IntToStr(i)+']';
end;

operator + (String, Integer) : String uses StrPlusInt;

PrintLn('abc'+123);

var s := 'abc'+123+456;

PrintLn(Length(s));
PrintLn(s);
