testdata/operators/fail/operator_overload1.dws
// Ported from: reference/dwscript-original/Test/OperatorOverloadFail/operator_overload1.pas
// Purpose: Test various operator declaration errors (wrong parameter counts, duplicate overloads, etc.)
// Expected: Multiple syntax errors for invalid operator declarations

function Func1 : String;
begin
   Result:='';
end;

procedure Proc;
begin
end;

function Func2(a, b : TObject) : String;
begin
   Result:='';
end;

function Func3(a : TObject; i : Integer) : String;
begin
   Result:='';
end;

operator + (Integer) : Integer uses Func1;
operator + (TObject, TObject) : String uses Func1;
operator + (TObject, TObject) : String uses Func2;
operator + (TObject, TObject) : String uses Func3;
operator + (Integer, Integer) : String uses Func2;

operator dummy ;
